--- a/css/style.css
+++ b/css/style.css
@@ -5,12 +5,12 @@ Description:    Styles my index.html
 
 @font-face {
     font-family: raquen;
-    src: url('./fonts/Raquen.otf');
+    src: url('../fonts/Raquen.otf');
 }
 
 @font-face {
     font-family: jetBrainsMono-regular;
-    src: url('./fonts/JetBrainsMono-Regular.ttf');
+    src: url('../fonts/JetBrainsMono-Regular.ttf');
 }
 
 body {
@@ -37,12 +37,6 @@ img.logo {
     width: 50px;
     height: 50px;
     margin: 1rem 1rem 0 0;
-}
-
-img.map {
-    width: auto;
-    padding: 1rem;
-    margin: 0 15% 0 0;
 }
 
 .swissflag {
